Update html coding exercize.html

--- a/html coding exercize.html
+++ b/html coding exercize.html
@@ -7,27 +7,37 @@
 </head>
 <body>
     
-<h1>Hello Students</h1>
+<h1>Brett Galisewski</h1>
 
-        <p> Hello world, my name is Brett!</p>
+        <H2>About me</H2>
 
-        <H2>Section 1.1</H2>
+        <img src="Scree chute browns.png"
+            height="450"
+            width="375"
+            img>
+            <p> My name is Brett, a recruiter at a top threat intelligence company based in NYC! 
+                I recently moved to Scottsdale, AZ from Stamford, CT. I had to try something new 
+                after being stuck in Stamford during COVID and with the warm weather and easy 
+                access to some of the best hiking/mountain biking trails I could not pass it up.</p>
+        <p>
+        <a href="https://flashpoint-intel.com/careers/">
+            Hot Jobs - all of them...we are a startup!
 
-        <p>Hello World, My name is Brettt</p>
-
+        </a>
+            
         <Ul>
-            <li>First Item</li>
-            <li>Second Item</li>
+            <li><a href="https://boards.greenhouse.io/flashpoint/jobs/5004010002?gh_jid=5004010002">Site Reliability Engineer</a> </li>
+            <li><a href="https://boards.greenhouse.io/flashpoint/jobs/5065663002?gh_jid=5065663002">Software Engineer in Test</a></li>
             <li>Third Item</li>
         </Ul>
 
-        <h3>Section 1.2</h3>
+        <h3>Highlights</h3>
 
-        <p>Here's a numbered list</p>
+        <p>What we look for in people</p>
         <ol>
-            <li>First Item</li>
-            <li>Second Item</li>
-            <li>Third Item</li>
+            <li>GSD - Get Stuff Done mentality</li>
+            <li>Adaptability</li>
+            <li>Teamwork</li>
     </ol>
 </body>
 </html>
